--- a/.github/workflows/spelling.yml
+++ b/.github/workflows/spelling.yml
@@ -17,6 +17,8 @@ jobs:
     steps:
     - name: Checkout Actions Repository
       uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
     - name: Spell Check Repo
       uses: crate-ci/typos@master
       with:
