chore(renovate): Make style consistent

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -33,8 +33,8 @@
       matchPackageNames: [
         'rust',
       ],
-      minimumReleaseAge: "336 days",  // 8 releases * 6 weeks per release * 7 days per week
-      internalChecksFilter: "strict",
+      minimumReleaseAge: '336 days',  // 8 releases * 6 weeks per release * 7 days per week
+      internalChecksFilter: 'strict',
     },
     // Goals:
     // - Keep version reqs low, ignoring compatible normal/build dependencies
