--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -36,6 +36,9 @@
       ],
       minimumReleaseAge: '336 days',  // 8 releases * 6 weeks per release * 7 days per week
       internalChecksFilter: 'strict',
+      schedule: [
+        'every day',
+      ],
     },
     // Goals:
     // - Keep version reqs low, ignoring compatible normal/build dependencies
