chore(ci): Don't fail on wildcards
See EmbarkStudios/cargo-deny#241

--- a/deny.toml
+++ b/deny.toml
@@ -88,7 +88,7 @@ ignore = true
 # Lint level for when multiple versions of the same crate are detected
 multiple-versions = "warn"
 # Lint level for when a crate version requirement is `*`
-wildcards = "deny"
+wildcards = "warn"
 # The graph highlighting used when creating dotgraphs for crates
 # with multiple versions
 # * lowest-version - The path to the lowest versioned duplicate is highlighted
