feat(help): Stabilize styling support
Fixes #3234

--- a/clap_builder/Cargo.toml
+++ b/clap_builder/Cargo.toml
@@ -32,7 +32,7 @@ tag-name = "v{{version}}"
 [features]
 default = ["std", "color", "help", "usage", "error-context", "suggestions"]
 debug = ["dep:backtrace"] # Enables debug messages
-unstable-doc = ["cargo", "wrap_help", "env", "unicode", "string", "unstable-styles"] # for docs.rs
+unstable-doc = ["cargo", "wrap_help", "env", "unicode", "string"] # for docs.rs
 
 # Used in default
 std = ["anstyle/std"] # support for no_std in a backwards-compatible way
