--- a/Cargo.toml
+++ b/Cargo.toml
@@ -86,7 +86,7 @@ suggestions = ["clap_builder/suggestions"]
 
 # Optional
 deprecated = ["clap_builder/deprecated", "clap_derive?/deprecated"] # Guided experience to prepare for next breaking release (at different stages of development, this may become default)
-derive = ["dep:clap_derive", "dep:once_cell"]
+derive = ["dep:clap_derive"]
 cargo = ["clap_builder/cargo"] # Disable if you're not using Cargo, enables Cargo-env-var-dependent macros
 wrap_help = ["clap_builder/wrap_help"]
 env = ["clap_builder/env"] # Use environment variables during arg parsing
@@ -103,7 +103,6 @@ bench = false
 [dependencies]
 clap_builder = { path = "./clap_builder", version = "=4.4.1", default-features = false }
 clap_derive = { path = "./clap_derive", version = "=4.4.0", optional = true }
-once_cell = { version = "1.12.0", optional = true }
 
 [dev-dependencies]
 trybuild = "1.0.82"
