--- a/clap_builder/Cargo.toml
+++ b/clap_builder/Cargo.toml
@@ -44,7 +44,7 @@ suggestions = ["dep:strsim", "error-context"]
 
 # Optional
 deprecated = [] # Guided experience to prepare for next breaking release (at different stages of development, this may become default)
-cargo = ["dep:once_cell"] # Disable if you're not using Cargo, enables Cargo-env-var-dependent macros
+cargo = [] # Disable if you're not using Cargo, enables Cargo-env-var-dependent macros
 wrap_help = ["help", "dep:terminal_size"]
 env = [] # Use environment variables during arg parsing
 unicode = ["dep:unicode-width", "dep:unicase"]  # Support for unicode characters in arguments and help messages
@@ -66,7 +66,6 @@ anstyle = "1.0.0"
 terminal_size = { version = "0.2.1", optional = true }
 backtrace = { version = "0.3.67", optional = true }
 unicode-width = { version = "0.1.9", optional = true }
-once_cell = { version = "1.12.0", optional = true }
 
 [dev-dependencies]
 trybuild = "1.0.82"
