--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -34,8 +34,8 @@
       matchPackageNames: [
         'rust',
       ],
-      minimumReleaseAge: '252 days',  // 6 releases * 6 weeks per release * 7 days per week
-      internalChecksFilter: 'strict',
+      //minimumReleaseAge: '252 days',  // 6 releases * 6 weeks per release * 7 days per week
+      //internalChecksFilter: 'strict',
       "extractVersion": "^(?<version>v\\d+\\.\\d+)",  // Drop the patch version
     },
     // Goals:
