chore(ci): Ensure Makefile gets updated

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -12,6 +12,7 @@
         '^rust-toolchain\\.toml$',
         'Cargo.toml$',
         'clippy.toml$',
+        '^Makefile$',
         '\\.clippy.toml$',
         '^\\.github/workflows/ci.yml$',
         '^\\.github/workflows/rust-next.yml$',
