--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -13,6 +13,7 @@
         'Cargo.toml$',
         'clippy.toml$',
         '^Makefile$',
+        '^tests/derive_ui.rs$',
         '\\.clippy.toml$',
         '^\\.github/workflows/ci.yml$',
         '^\\.github/workflows/rust-next.yml$',
