chore(ci): Revert experiments

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -36,12 +36,9 @@
       matchPackageNames: [
         'rust',
       ],
-      //minimumReleaseAge: '252 days',  // 6 releases * 6 weeks per release * 7 days per week
-      //internalChecksFilter: 'strict',
+      minimumReleaseAge: '252 days',  // 6 releases * 6 weeks per release * 7 days per week
+      internalChecksFilter: 'strict',
       "extractVersion": "^(?<version>\\d+\\.\\d+)",  // Drop the patch version
-      schedule: [
-        '* * * * *',
-      ],
     },
     // Goals:
     // - Keep version reqs low, ignoring compatible normal/build dependencies
