--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -36,6 +36,7 @@
       ],
       minimumReleaseAge: '336 days',  // 8 releases * 6 weeks per release * 7 days per week
       internalChecksFilter: 'strict',
+      "extractVersion": "^(?<version>\\d+\\.\\d+)",  // Drop the patch version
       schedule: [
         '* * * * *',
       ],
