chore(ci): Updaet Renovate schema

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -5,7 +5,7 @@
   semanticCommits: 'enabled',
   configMigration: true,
   dependencyDashboard: true,
-  regexManagers: [
+  customManagers: [
     {
       customType: 'regex',
       fileMatch: [
