--- a/clap_builder/Cargo.toml
+++ b/clap_builder/Cargo.toml
@@ -40,7 +40,7 @@ color = ["dep:anstream"]
 help = []
 usage = []
 error-context = []
-suggestions = ["dep:strsim", "error-context"]
+suggestions = ["dep:rapidfuzz", "error-context"]
 
 # Optional
 deprecated = [] # Guided experience to prepare for next breaking release (at different stages of development, this may become default)
@@ -60,7 +60,7 @@ bench = false
 [dependencies]
 clap_lex = { path = "../clap_lex", version = "0.6.0" }
 unicase = { version = "2.6.0", optional = true }
-strsim = { version = "0.10.0",  optional = true }
+rapidfuzz = { version = "0.5.0",  optional = true }
 anstream = { version = "0.6.0", optional = true }
 anstyle = "1.0.0"
 terminal_size = { version = "0.3.0", optional = true }
