--- a/.github/workflows/rust-next.yml
+++ b/.github/workflows/rust-next.yml
@@ -32,6 +32,8 @@ jobs:
       with:
         toolchain: ${{ matrix.rust }}
     - uses: Swatinem/rust-cache@v2
+    - name: Build
+      run: cargo test --workspace --no-run
     - name: Default features
       run: cargo test --workspace
     - name: All features
@@ -51,9 +53,11 @@ jobs:
     - uses: Swatinem/rust-cache@v2
     - name: Update dependencues
       run: cargo update
+    - name: Build
+      run: cargo test --workspace --no-run
     - name: Default features
-      run: cargo test --workspace --all-targets
+      run: cargo test --workspace
     - name: All features
-      run: cargo test --workspace --all-targets --all-features
+      run: cargo test --workspace --all-features
     - name: No-default features
-      run: cargo test --workspace --all-targets --no-default-features
+      run: cargo test --workspace --no-default-features
