--- a/clap_complete_nushell/Cargo.toml
+++ b/clap_complete_nushell/Cargo.toml
@@ -37,4 +37,5 @@ clap_complete = { path = "../clap_complete", version = "4.0.0" }
 [dev-dependencies]
 snapbox = { version = "0.4.15", features = ["diff", "examples", "path"] }
 clap = { path = "../", version = "4.0.0", default-features = false, features = ["std", "help"] }
-completest = { version = "0.2.0", features = ["nu"] }
+completest = "0.4.0"
+completest-nu = "0.4.0"
