--- a/Cargo.toml
+++ b/Cargo.toml
@@ -160,6 +160,11 @@ path = "examples/repl.rs"
 required-features = ["help"]
 
 [[example]]
+name = "repl-derive"
+path = "examples/repl-derive.rs"
+required-features = ["derive"]
+
+[[example]]
 name = "01_quick"
 path = "examples/tutorial_builder/01_quick.rs"
 required-features = ["cargo"]
