--- a/clap_bench/Cargo.toml
+++ b/clap_bench/Cargo.toml
@@ -13,35 +13,25 @@ release = false
 
 [dev-dependencies]
 clap = { path = "../", version = "4.0.0", default-features = false, features = ["std", "help"] }
-criterion = "0.5.1"
+divan = "0.1.11"
 lazy_static = "1.4.0"
 
 [[bench]]
 harness = false
-name = "01_default"
-path = "benches/01_default.rs"
+name = "empty"
 
 [[bench]]
 harness = false
-name = "02_simple"
-path = "benches/02_simple.rs"
+name = "simple"
 
 [[bench]]
 harness = false
-name = "03_complex"
-path = "benches/03_complex.rs"
+name = "complex"
 
 [[bench]]
 harness = false
-name = "04_new_help"
-path = "benches/04_new_help.rs"
+name = "rustup"
 
 [[bench]]
 harness = false
-name = "05_ripgrep"
-path = "benches/05_ripgrep.rs"
-
-[[bench]]
-harness = false
-name = "06_rustup"
-path = "benches/06_rustup.rs"
+name = "ripgrep"
