chore: Encourage use of workspace.dependencies

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,8 @@ include = [
   "examples/**/*"
 ]
 
+[workspace.dependencies]
+
 [workspace.lints.rust]
 missing_docs = "warn"
 rust_2018_idioms = "warn"
