chore(ci): Auto-merge linter version updates

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -72,6 +72,7 @@
       schedule: [
         '* * * * *',
       ],
+      automerge: true,
     },
     // Goals:
     // - Keep version reqs low, ignoring compatible normal/build dependencies
