--- a/clap_complete/Cargo.toml
+++ b/clap_complete/Cargo.toml
@@ -42,7 +42,7 @@ shlex = { version = "1.1.0", optional = true }
 unicode-xid = { version = "0.2.2", optional = true }
 
 [dev-dependencies]
-snapbox = { version = "0.5.9", features = ["diff", "path", "examples"] }
+snapbox = { version = "0.6.0", features = ["diff", "dir", "examples"] }
 # Cutting out `filesystem` feature
 trycmd = { version = "0.15.1", default-features = false, features = ["color-auto", "diff", "examples"] }
 completest = "0.4.0"
