fix: Point `repository` metadata to clonable URLs
This tweaks the `repository` fields in Cargo metadata in order to
use the correct (i.e. git clonable) URL.
The existing GitHub webUI URLs for each package have been retained
and moved to `homepage` fields.

--- a/clap_complete/Cargo.toml
+++ b/clap_complete/Cargo.toml
@@ -2,7 +2,8 @@
 name = "clap_complete"
 version = "4.5.2"
 description = "Generate shell completion scripts for your clap::Command"
-repository = "https://github.com/clap-rs/clap/tree/master/clap_complete"
+homepage = "https://github.com/clap-rs/clap/tree/master/clap_complete"
+repository = "https://github.com/clap-rs/clap"
 categories = ["command-line-interface"]
 keywords = [
   "clap",
