--- a/clap_mangen/Cargo.toml
+++ b/clap_mangen/Cargo.toml
@@ -2,7 +2,8 @@
 name = "clap_mangen"
 version = "0.2.20"
 description = "A manpage generator for clap"
-repository = "https://github.com/clap-rs/clap/tree/master/clap_mangen"
+homepage = "https://github.com/clap-rs/clap/tree/master/clap_mangen"
+repository = "https://github.com/clap-rs/clap"
 categories = ["command-line-interface"]
 keywords = [
   "clap",
