--- a/clap_complete_fig/Cargo.toml
+++ b/clap_complete_fig/Cargo.toml
@@ -2,7 +2,8 @@
 name = "clap_complete_fig"
 version = "4.5.0"
 description = "A generator library used with clap for Fig completion scripts"
-repository = "https://github.com/clap-rs/clap/tree/master/clap_complete_fig"
+homepage = "https://github.com/clap-rs/clap/tree/master/clap_complete_fig"
+repository = "https://github.com/clap-rs/clap"
 categories = ["command-line-interface"]
 keywords = [
   "clap",
