--- a/clap_complete_nushell/Cargo.toml
+++ b/clap_complete_nushell/Cargo.toml
@@ -2,7 +2,6 @@
 name = "clap_complete_nushell"
 version = "4.5.1"
 description = "A generator library used with clap for Nushell completion scripts"
-repository = "https://github.com/clap-rs/clap/tree/master/clap_complete_nushell"
 categories = ["command-line-interface"]
 keywords = [
   "clap",
@@ -10,6 +9,7 @@ keywords = [
   "completion",
   "nushell"
 ]
+repository.workspace = true
 license.workspace = true
 edition.workspace = true
 rust-version.workspace = true
