--- a/clap_bench/Cargo.toml
+++ b/clap_bench/Cargo.toml
@@ -3,6 +3,7 @@ name = "clap_bench"
 version = "0.0.0"
 description = "Benchmarks for clap"
 publish = false
+repository.workspace = true
 license.workspace = true
 edition.workspace = true
 rust-version.workspace = true
