--- a/clap_derive/Cargo.toml
+++ b/clap_derive/Cargo.toml
@@ -2,7 +2,6 @@
 name = "clap_derive"
 version = "4.5.4"
 description = "Parse command line argument by defining a struct, derive crate."
-repository = "https://github.com/clap-rs/clap/tree/master/clap_derive"
 categories = ["command-line-interface", "development-tools::procedural-macro-helpers"]
 keywords = [
   "clap",
@@ -11,6 +10,7 @@ keywords = [
   "derive",
   "proc_macro"
 ]
+repository.workspace = true
 license.workspace = true
 edition.workspace = true
 rust-version.workspace = true
