chore(ci): Auto-update Mac now that latest uses m1

--- a/.github/workflows/rust-next.yml
+++ b/.github/workflows/rust-next.yml
@@ -21,7 +21,7 @@ jobs:
     name: Test
     strategy:
       matrix:
-        os: ["ubuntu-latest", "windows-latest", "macos-latest", "macos-14"]
+        os: ["ubuntu-latest", "windows-latest", "macos-latest"]
         rust: ["stable", "beta"]
         include:
         - os: ubuntu-latest
