fix(completest): For bash, zsh, and fish

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,7 @@ env:
   RUST_BACKTRACE: 1
   CARGO_TERM_COLOR: always
   CLICOLOR: 1
+  TERM: xterm
 
 concurrency:
   group: "${{ github.workflow }}-${{ github.ref }}"
