chore(ci): Skip clap_complete_nushell from minimal-versions
Its just too messy to try to handle.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -159,7 +159,7 @@ jobs:
     - name: Downgrade dependencies to minimal versions
       run: cargo +nightly generate-lockfile -Z minimal-versions
     - name: Compile with minimal versions
-      run: cargo +stable check --workspace --all-features --locked
+      run: cargo +stable check --workspace --all-features --locked --exclude clap_complete_nushell
   lockfile:
     runs-on: ubuntu-latest
     steps:
