--- a/clap_builder/Cargo.toml
+++ b/clap_builder/Cargo.toml
@@ -52,7 +52,7 @@ string = []  # Allow runtime generated strings
 
 # In-work features
 unstable-v5 = ["deprecated"]
-unstable-styles = ["color"]
+unstable-styles = ["color"]  # deprecated
 
 [lib]
 bench = false
