feat(builder): Add Extension API

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -168,6 +168,7 @@ string = ["clap_builder/string"]  # Allow runtime generated strings
 
 # In-work features
 unstable-v5 = ["clap_builder/unstable-v5", "clap_derive?/unstable-v5", "deprecated"]
+unstable-ext = []
 unstable-styles = ["clap_builder/unstable-styles"]  # deprecated
 
 [lib]
