--- a/clap_builder/Cargo.toml
+++ b/clap_builder/Cargo.toml
@@ -52,6 +52,7 @@ string = []  # Allow runtime generated strings
 
 # In-work features
 unstable-v5 = ["deprecated"]
+unstable-ext = []
 unstable-styles = ["color"]  # deprecated
 
 [lib]
