fix(complete)!: Put CompleteCommand behind unstable-command
Avoid the cost of the deps when not needed.

--- a/clap_complete/Cargo.toml
+++ b/clap_complete/Cargo.toml
@@ -52,12 +52,13 @@ automod = "1.0.14"
 
 [[example]]
 name = "dynamic"
-required-features = ["unstable-dynamic"]
+required-features = ["unstable-dynamic", "unstable-command"]
 
 [features]
 default = []
-unstable-doc = ["unstable-dynamic"] # for docs.rs
-unstable-dynamic = ["dep:clap_lex", "dep:shlex", "dep:unicode-xid", "clap/derive", "dep:is_executable", "dep:pathdiff", "clap/unstable-ext"]
+unstable-doc = ["unstable-dynamic", "unstable-command"] # for docs.rs
+unstable-dynamic = ["dep:clap_lex", "dep:is_executable", "dep:pathdiff", "clap/unstable-ext"]
+unstable-command = ["unstable-dynamic", "dep:shlex", "dep:unicode-xid", "clap/derive", "dep:is_executable", "dep:pathdiff", "clap/unstable-ext"]
 debug = ["clap/debug"]
 
 [lints]
