--- a/clap_complete/Cargo.toml
+++ b/clap_complete/Cargo.toml
@@ -37,7 +37,6 @@ bench = false
 clap = { path = "../", version = "4.5.15", default-features = false, features = ["std"] }
 clap_lex = { path = "../clap_lex", version = "0.7.0", optional = true }
 is_executable = { version = "1.0.1", optional = true }
-pathdiff = { version = "0.2.1", optional = true }
 shlex = { version = "1.1.0", optional = true }
 unicode-xid = { version = "0.2.2", optional = true }
 
@@ -57,8 +56,8 @@ required-features = ["unstable-dynamic", "unstable-command"]
 [features]
 default = []
 unstable-doc = ["unstable-dynamic", "unstable-command"] # for docs.rs
-unstable-dynamic = ["dep:clap_lex", "dep:shlex", "dep:is_executable", "dep:pathdiff", "clap/unstable-ext"]
-unstable-command = ["unstable-dynamic", "dep:unicode-xid", "clap/derive", "dep:is_executable", "dep:pathdiff", "clap/unstable-ext"]
+unstable-dynamic = ["dep:clap_lex", "dep:shlex", "dep:is_executable", "clap/unstable-ext"]
+unstable-command = ["unstable-dynamic", "dep:unicode-xid", "clap/derive", "dep:is_executable", "clap/unstable-ext"]
 debug = ["clap/debug"]
 
 [lints]
